--- a/.gitconfig
+++ b/.gitconfig
@@ -3,6 +3,7 @@
 	email = tkmtmkt@gmail.com
 [core]
 	excludesfile = ~/.gitignore  # globalな.gitignoreの指定
+	safecrlf = true
 	autocrlf = false
 	editor = vim
 	quotepath = false
