--- a/.gitconfig
+++ b/.gitconfig
@@ -3,6 +3,7 @@
 	email = tkmtmkt@gmail.com
 [core]
 	excludesfile = ~/.gitexclude  # globalな無視ファイル指定
+	filemode = false
 	autocrlf = false
 	safecrlf = true
 	editor = gvim +1
