UntrackedにPSのModulesが表示されないように修正

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 !/Documents
 /Documents/*
 !/Documents/WindowsPowerShell
+/Documents/WindowsPowerShell/*
+!/Documents/WindowsPowerShell/profile.ps1
 !/.bashrc
 !/.gitconfig
 !/.gitexclude
