PowerShell環境にposh-git追加、その他説明追記等

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "Documents/WindowsPowerShell/Modules/posh-git"]
+	path = Documents/WindowsPowerShell/Modules/posh-git
+	url = https://github.com/dahlbyk/posh-git.git
 [submodule ".vim/bundle/neobundle.vim"]
 	path = .vim/bundle/neobundle.vim
 	url = https://github.com/Shougo/neobundle.vim.git
