印刷文字化け対処
 * encoding=utf-8 を設定した状態では、印刷時にページヘッダに表示する
  「nページ」の日本語が文字化けする。
 * printerfont の設定に「,」は記述できないので修正した。

--- a/.gitconfig
+++ b/.gitconfig
@@ -7,7 +7,7 @@
 	filemode = false
 	autocrlf = false
 	safecrlf = true
-	editor = gvim +1
+	editor = gvim +1 -c \"set fenc=utf-8 ff=unix\"
 	quotepath = false
 	pager = nkf32 | less
 
