--- a/.gitconfig
+++ b/.gitconfig
@@ -26,7 +26,7 @@
 	fontui = -family \"ＭＳ ゴシック\" -size 10 -weight normal -slant roman -underline 0 -overstrike 0
 
 [push]
-	default = upstream       # defaultのpush先はtrackingしているリポジトリ
+	default = simple
 
 [pull]
 	rebase = true            # git pull --rebase
