--- a/.gitmodules
+++ b/.gitmodules
@@ -1,54 +1,6 @@
 [submodule "Documents/WindowsPowerShell/Modules/posh-git"]
 	path = Documents/WindowsPowerShell/Modules/posh-git
 	url = https://github.com/dahlbyk/posh-git.git
-[submodule "vimfiles/bundle/neobundle.vim"]
-	path =vimfiles/bundle/neobundle.vim
-	url = https://github.com/Shougo/neobundle.vim.git
-[submodule "vimfiles/bundle/vimproc.vim"]
-	path =vimfiles/bundle/vimproc.vim
-	url = https://github.com/Shougo/vimproc.vim.git
-[submodule "vimfiles/bundle/vimshell.vim"]
-	path =vimfiles/bundle/vimshell.vim
-	url = https://github.com/Shougo/vimshell.vim.git
-[submodule "vimfiles/bundle/unite.vim"]
-	path =vimfiles/bundle/unite.vim
-	url = https://github.com/Shougo/unite.vim.git
-[submodule "vimfiles/bundle/neocomplcache.vim"]
-	path =vimfiles/bundle/neocomplcache.vim
-	url = https://github.com/Shougo/neocomplcache.vim.git
-[submodule "vimfiles/bundle/syntastic"]
-	path =vimfiles/bundle/syntastic
-	url = https://github.com/scrooloose/syntastic.git
-[submodule "vimfiles/bundle/vim-ps1"]
-	path =vimfiles/bundle/vim-ps1
-	url = https://github.com/PProvost/vim-ps1.git
-[submodule "vimfiles/bundle/vim-scala"]
-	path =vimfiles/bundle/vim-scala
-	url = https://github.com/derekwyatt/vim-scala.git
-[submodule "vimfiles/bundle/kotlin-vim"]
-	path = vimfiles/bundle/kotlin-vim
-	url = https://github.com/udalov/kotlin-vim.git
-[submodule "vimfiles/bundle/VimClojure"]
-	path =vimfiles/bundle/VimClojure
-	url = https://github.com/vim-scripts/VimClojure.git
-[submodule "vimfiles/bundle/vim-elixir"]
-	path = vimfiles/bundle/vim-elixir
-	url = https://github.com/elixir-lang/vim-elixir.git
-[submodule "vimfiles/bundle/vim-coffee-script"]
-	path =vimfiles/bundle/vim-coffee-script
-	url = https://github.com/kchmck/vim-coffee-script.git
-[submodule "vimfiles/bundle/vim-slim"]
-	path =vimfiles/bundle/vim-slim
-	url = https://github.com/slim-template/vim-slim.git
-[submodule "vimfiles/bundle/riv.vim"]
-	path = vimfiles/bundle/riv.vim
-	url = https://github.com/Rykka/riv.vim.git
-[submodule "vimfiles/bundle/vim-gradle"]
-	path =vimfiles/bundle/vim-gradle
-	url = https://github.com/martintreurnicht/vim-gradle.git
-[submodule "vimfiles/bundle/gtags.vim"]
-	path =vimfiles/bundle/gtags.vim
-	url = https://github.com/vim-scripts/gtags.vim.git
-[submodule "vimfiles/bundle/agit.vim"]
-	path = vimfiles/bundle/agit.vim
-	url = https://github.com/cohama/agit.vim.git
+[submodule "vimfiles/dein/dein.vim"]
+	path = vimfiles/dein/dein.vim
+	url = https://github.com/Shougo/dein.vim.git
