--- a/.gitconfig
+++ b/.gitconfig
@@ -127,8 +127,8 @@
 [tig "bind"]
 	generic = g move-first-line
 	generic = G move-last-line
-	generic = ^F move-page-down
-	generic = ^B move-page-up
+	generic = <Ctrl+F> move-page-down
+	generic = <Ctrl+B> move-page-up
 
 [help]
 	format = html
