--- a/.gitconfig
+++ b/.gitconfig
@@ -71,14 +71,14 @@
 	wc = whatchanged         # logに変更されたファイルも一緒に出す
 	ls = log --stat          # logに変更されたファイルも一緒に出す
 	lp = log -p              # diffも一緒に出す
-	la = log --pretty=\"format:%ad (%an): %h %s\" --date=short  # ざっくりログ出す
-	ll = log --pretty=\"format:%Cgreen%ai %Cblue%<(20,trunc)%an%Creset %h %d %s\" --decorate
+	la = log --pretty=\"format:%C(green)%ad %C(cyan)(%an): %C(yellow)%h%Creset %s\" --date=short  # ざっくりログ出す
+	ll = log --pretty=\"format:%C(green)%ai %C(cyan)%<(20,trunc)%an %C(yellow)%h%Creset %s %C(red)%d%Creset\" --decorate
 	lr = log origin          # originのlog
 	oneline = log --oneline --decorate
 	ranking = shortlog -s -n --no-merges
 	# logをtree表示
-	log-graph = log --graph --date=short --pretty=format:'%Cgreen%cd %Cblue%cn %Creset%h %s'
-	log-all = log --graph --all --color --pretty='%x09%cn%x09%h %s %Cred%d%Creset'
+	log-graph = log --graph --date=short --pretty=format:'%C(green)%cd %C(cyan)%cn %C(yellow)%h%Creset %s'
+	log-all = log --graph --all --color --pretty='%x09%C(cyan)%cn%x09%C(yellow)%h%Creset %s %C(red)%d%Creset'
 	# reset
 	rhs  = reset --soft HEAD
 	rhs1 = reset --soft HEAD~
