--- a/.ssh/config
+++ b/.ssh/config
@@ -1,3 +1,11 @@
+Host *
+    UserKnownHostsFile /dev/null
+    StrictHostKeyChecking no
+    HashKnownHosts no
+    IdentitiesOnly yes
+    TCPKeepAlive yes
+
 Host github.com
-    Compression yes
+    User git
     Ciphers aes256-ctr,aes192-ctr,aes128-ctr
+    Compression yes
