fix: ssh不要設定削除

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,7 +1,6 @@
 Host *
-    UserKnownHostsFile /dev/null
+    #UserKnownHostsFile /dev/null
     StrictHostKeyChecking no
-    HashKnownHosts no
     IdentitiesOnly yes
     TCPKeepAlive yes
 
